# textual-wtf

./: .coveragerc  .gitignore  INSTALLATION.md  LICENSE  Makefile  PACKAGE_SUMMARY.txt  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  gemini01.py  mkdocs.yml  pyproject.toml  textual_wtf_api_reference.md
.claude/: launch.json
docs/: TESTING_GUIDE.md  getting_started.md  index.md
docs/guide/: embedding.md  fields.md  forms.md  index.md  layout.md  tabbed_forms.md  validation.md
docs/how-to/: cross_field_validation.md  custom_layout.md  custom_validator.md  index.md
docs/reference/: bound_field.md  exceptions.md  fields.md  forms.md  index.md  layouts.md  tabbed_form.md  validators.md
docs/stylesheets/: custom.css
examples/: __main__.css  __main__.py  advanced_form.py  basic_form.py  chooser_screen.py  composition_example.py  embedded_forms_demo.py  example_app.py  example_screen.py  form_example_0_6_0a3.py  ids.css  interactive_layout_demo.py  layout_options_demo.py  nested_once_form.py  nested_twice_form.py  results_screen.py  simple_field_example.py  simple_rendered_form.py  tabbed_settings_demo.py  user_registration.py  validator_gallery_demo.py
src/: wingdbstub.py
src/textual_forms/: __init__.py  exceptions.py  field.py  fields.py  forms.py  validators.py  version.py
src/textual_forms/demo/: advanced_form.py  basic_form.py  basic_form.tcss  launcher.py  nested_once_form.py  nested_twice_form.py  results_screen.py  user_registration.py
src/textual_wtf/: __init__.py  bound.py  bound_fields.py  controller.py  exceptions.py  field_errors.py  field_widget.py  fields.py  forms.py  layouts.py  tabbed_form.py  types.py  validators.py  version.py  widgets.py
src/textual_wtf/demo/: advanced_form.py  basic_form.py  launcher.py  nested_once_form.py  nested_twice_form.py  user_registration.py
src/textual_wtf/examples/: __main__.py  chooser_screen.py  form_composition_demo.py  interactive_layout_demo.py  password_change_demo.py  rendering_modes_demo.py  tabbed_settings_demo.py  (+1 more)
tests/: conftest.py  test_bound_field.py  test_composition.py  test_exceptions.py  test_fields.py  test_forms.py  test_integration.py  test_string_field.py  test_user_input.py  test_validators.py  test_widgets.py
