[project]
name = "textual-wtf"
version = "0.1.0a4"
description = "Declarative forms library for Textual TUI applications"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "textual>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
