[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-wtf"
version = "0.10.2"
description = "Declarative forms library for Textual TUI applications"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Steve Holden" }]
dependencies = ["textual>=0.47.0"]

[project.scripts]
textual-wtf = "textual_wtf.examples.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/textual_wtf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
docs = [
    "mkdocs>=1.6.1,<2.0",
    "mkdocs-material>=9.7.3,<10.0",
    "mkdocstrings[python]>=1.0.3",
    "mkdocstrings-python>=2.0",
    "mkdocs-autorefs>=1.2",
    "ruff>=0.4",
]
